# nvidia-nim-containers-gcloud-test

./: .gitignore  Dockerfile  README_PRD.md  deploy_gcp.sh  docker-compose.yml  startup.sh  uninstall_expressvpn.sh
backend/: Cargo.toml
backend/src/: main.rs  nim_client.rs  websocket.rs
frontend/: package-lock.json  package.json  postcss.config.js  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: websocket.js
frontend/src/components/: AudioVisualizer.jsx
